documentation and create auto script tag

--- a/example/assets/style.css
+++ b/example/assets/style.css
@@ -1,5 +1,5 @@
 /**
-Full Stack PHP Developer Console CSS
+CoffeeCode Console CSS
  */
 @import url('https://fonts.googleapis.com/css?family=Open+sans|Source+Code+Pro');
 
